src/components/Sidebar/Sidebar.scss
/*
 * Copyright (c) 2016-present, Parse, LLC
 * All rights reserved.
 *
 * This source code is licensed under the license found in the LICENSE file in
 * the root directory of this source tree.
 */
@import 'stylesheets/globals.scss';
@import 'stylesheets/back4app.scss';

.sidebar {
  position: fixed;
  width: 300px;
  top: $header-height;
  left: 0;
  bottom: 0;
  background: #0c5582;
  color: #fff;
  transition: left 0.5s ease-in;

  &.collapsed {
    left: 0;
    width: 54px;

    .pinContainer {
      height: 48px;
      display: flex;
      justify-content: center;
      align-items: center;
      background-color: #094162;
      cursor: pointer;
      padding: 18px;

      &:hover {
        background-color: #1184ca;
      }
    }

    .footer {
      height: 48px;
      justify-content: center;
      cursor: pointer;

      &:hover {
        background-color: #1184ca;
      }
    }

    .content {
      bottom: 48px;
    }
  }
}

.content {
  position: absolute;
  overflow-y: auto;
  top: 48px;
  right: 0;
  bottom: 61px;
  left: 0;
}

.footer {
  @include NotoSansFont;
  position: absolute;
  background: #094162;
  height: 61px;
  line-height: 18px;
  padding: 10px;
  text-align: center;
  bottom: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: flex-end;
  align-items: center;

  a {
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    color: white;
    text-decoration: none;
    border-right: 1px solid #385261;
    height: 29px;
    line-height: 18px;
    font-size: 12px;
    margin-left: 7px;
    vertical-align: top;
    font-family: inherit;
    font-weight: bold;
    border-radius: 5px;
    padding: 0;

    &:first-child {
      padding-left: 0;
    }
    &:last-child {
      padding-right: 0;
      border: none;
    }
  }

  svg {
    margin-top: -2px;
  }
}

.help {
  @extend .footer;
  height: 61px;
}

.header {
  background: #05283c;
  height: 48px;
  padding: 10px 14px;

  :global(.icon) {
    width: 28px;
    height: 28px;
    float: left;
  }
}

.currentApp, .menuRow {
  @include ellipsis();
  display: block;
  background: #094162;
  height: 48px;
  padding: 10px 14px;

  color: white;
  font-size: 18px;
  font-weight: 700;
  line-height: 30px;
}

.currentAppNameGroup {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.menuRow {
  cursor: pointer;
  border-bottom: 1px solid #0c5582;

  > *:first-child {
    display: inline-block;
    max-width: 200px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }

  > *:not(:first-child) {
    float: right;
  }
}

.currentApp {
  position: relative;
  display: flex;
  justify-content: space-between;
  align-items: center;

  &:hover{
      &:after {
        border-top-color: white;
      }
  }

  .currentAppName {
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 215px;
    cursor: pointer;
  }

  .appsSelectorArrow {
    @include arrow('down', 10px, 7px, #fff);
    margin-left: 8px;
  }

  .sidebarPin {
    cursor: pointer;
    height: 30px;
    width: 30px;
    padding: 6px;
    fill: lightgrey;

    &:hover {
      fill: white;
    }

    &.fixed {
      fill: white;
    }

    &.inverseIcon {
      transform: rotate(180deg);
    }
  }
}

.appsMenu {
  overflow: auto;
  background: #094162;
  width: 300px;

  .menuRow:hover {
    background: #0c5582;
  }

  .currentApp .appsSelectorArrow {
    @include arrow('up', 10px, 7px, #ffffff);
  }
}

.menuSection {
  @include DosisFont;
  height: 24px;
  line-height: 24px;
  background: #0c5582;
  color: #84A5BC;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 8px;
  padding: 0 14px;
  border-bottom: 1px solid #094162;
}

.createApp {
  @include DosisFont;
  display: block;
  background: $blue;
  color: white;
  width: 91%;
  height: 30px;
  line-height: 30px;
  border-radius: 5px;
  text-align: center;
  margin: 12px auto;
  font-size: 12px;

  &:hover {
    background: #0c5582;
  }
}

.section {
  background: #0c5582;

  :global(.icon) {
    margin-right: 14px;
  }

  &.collapsed {
    cursor: pointer;

    .section_header > svg {
      margin: 0;
    }
  }
}

.active {
  background: #159cee;

  .section_header{
    font-weight: 700;
    &:hover{
      background: #159cee;
    }
  }
}

.section_header {
  display: block;
  height: 48px;
  font-size: 18px;
  line-height: 28px;
  padding: 12px 14px;
  color: white;

  &:hover{
    background-color: #1184ca;
    text-decoration: underline;
    color: white;
  }

  > span {
    vertical-align: top;
  }

  > svg {
    margin-right: 14px;
  }
}

.section_contents {
  background: #0e69a0;
  padding: 16px 14px 16px 50px;
}

.subitem {
  position: relative;
  height: 28px;
  line-height: 28px;
  font-size: 16px;
  font-weight: 700;
  color: white;
}

a.subitem {
  color: #8fb9cf;
  font-weight: 400;
  display: inline-block;
  width: 100%;

  &:hover {
    color: white;
  }
}

.action {
  @include DosisFont;
  position: absolute;
  font-size: 12px;
  font-weight: 400;
  padding: 0 8px;
  line-height: 20px;
  top: 4px;
  right: 0px;
  background: #0c5987;
  color: white;
  border-radius: 3px;

  &:hover {
    background: #094162;
  }
}

.logo {
  float: left;
}

.version {
  @include DosisFont;
  position: relative;
  width: 75px;
  height: 100%;
  font-size: 10px;
  float: left;
  margin-left: 6px;
  white-space: nowrap;
  color: white;

  > *:first-child {
    position: absolute;
    letter-spacing: 2px;
    line-height: 10px;
    text-transform: uppercase;
  }

  > *:first-child {
    top: 10px;
    transition: all 0.4s 0.16s cubic-bezier(0.77, 0, 0.175, 1);
  }
}

.more {
  svg {
    fill: $white;
    transform: rotate(90deg);
    transition: fill 0.2s ease-in;
  }

  &:hover {
    svg {
      fill: $blue;
    }
  }
}

.popup {
  position: absolute;
  bottom: 4px;
  left: -183px;
  background: white;
  width: 200px;
  border-radius: 5px;

  &:after {
    @include arrow('down', 12px, 6px, #ffffff);
    content: '';
    position: absolute;
    bottom: -6px;
    right: 11px;
  }

  a {
    @include NotoSansFont;
    display: block;
    height: 30px;
    line-height: 31px;
    font-size: 13px;
    text-align: right;
    border-bottom: 1px solid #e0e0ea;
    border-radius: 5px;
    color: $mainTextColor;
    padding-right: 8px;
    &:hover{
      background-color: darken(white,4%)
    }

    // &:first-child {
    //   border-radius: 5px 5px 0 0;
    // }

    // &:last-child {
    //   border-bottom: 0;
    //   border-radius: 0 0 5px 5px;
    // }

    .emoji{
      padding-left: 4px;
      padding-right: 2px;
    }
  }
}

